--- a/src/app/calculate-ammount/calculate-ammount.component.html
+++ b/src/app/calculate-ammount/calculate-ammount.component.html
@@ -41,7 +41,7 @@
                     }
                 </select>
                 <h6>Price</h6>
-                <input type="number"  id="input-person" [value]="itemPrice"  class='h-40 form-control w-100'>
+                <input type="number"  id="input-person" [value]="itemPrice"  class='h-40 form-control w-100' readonly>
                 <h6>Quantity</h6>
                 <input type="number"  id="input-person"
                     formControlName="quantity"  class='h-40 form-control w-100'>
