--- a/src/app/calculate-ammount/calculate-ammount.component.html
+++ b/src/app/calculate-ammount/calculate-ammount.component.html
@@ -2,8 +2,9 @@
     <div class="row d-flex justify-content-between">
         <div class="col-md-6 p-5 border right-section order-xl-1 order-sm-2">
             <h3 class="text-center ">Payment</h3>
+            <!-- <button (click)="downloadAsPDF()">downloadAsPDF</button> -->
             <hr>
-            <table class="table borderless">
+            <table class="table borderless" id="pdfTable" #pdfTable>
                 <thead>
                     <tr>
                         <th scope="col">Item</th>
