--- a/src/app/calculate-ammount/calculate-ammount.component.html
+++ b/src/app/calculate-ammount/calculate-ammount.component.html
@@ -7,7 +7,7 @@
             <table class="table borderless" id="pdfTable" #pdfTable>
                 <thead>
                     <tr>
-                        <th scope="col">Tip</th>
+                        <th scope="col">Tip:</th>
                         <th scope="col" id='total-tip' class="valueth">{{ totaltip || '0.00' }} ₹</th>
                     </tr>
                     <tr>
