--- a/src/app/calculate-ammount/calculate-ammount.component.scss
+++ b/src/app/calculate-ammount/calculate-ammount.component.scss
@@ -13,21 +13,38 @@ $border-color_2: #9FE8DF;
     padding: 3% !important;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
     border: 0px;
+    width: 80%;
+    margin: auto;
 }
+
 .error {
     color: red;
     font-size: 12px;
     margin-bottom: 10px;
 }
+
+span {
+    color: #7b9fa5;
+    font-size: 17px;
+}
+
 .right-section {
     background: rgb(26, 72, 75);
     color: $color_1;
     border-radius: 20px;
-    height: 100%;
+    height: 465px;
     margin: auto;
+    margin-bottom: 24px;
+    padding-top: 30px !important;
+
     .table {
         color: #fff;
     }
+}
+
+form {
+    height: 326px;
+    padding-top: 27px
 }
 
 .btn-success {
@@ -52,7 +69,7 @@ th {
 input {
     background: #F3F9FA;
     border: none;
-    margin-bottom: 15px!important;
+    margin-bottom: 15px !important;
 }
 
 select {
@@ -149,5 +166,70 @@ input[type="button"] {
     &:focus {
         border-color: $border-color_2 !important;
         box-shadow: none !important;
+    }
+}
+
+
+.reloadDouble {
+    display: inline-block;
+    position: relative;
+    // -webkit-animation: rotate 1.5s linear infinite;
+    cursor: pointer;
+}
+
+small {
+    display: block;
+    line-height: 2.25em;
+}
+
+.animation {
+
+    animation: rotate 1s linear infinite;
+}
+
+// Double
+.reloadDouble {
+    border-color: transparent white;
+    border-radius: 50%;
+    border-style: solid;
+    border-width: .125em;
+    height: 1.5em;
+    margin: .25em;
+    width: 1.5em;
+
+    &:before,
+    &:after {
+        border-style: solid;
+        content: '';
+        display: block;
+        position: absolute;
+        width: 0;
+        -webkit-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+    }
+
+    &:after {
+        border-color: transparent transparent transparent white;
+        border-width: .3125em 0 .3125em .5em;
+        top: -.3125em;
+        left: .0625em;
+    }
+
+    &:before {
+        border-color: transparent white transparent transparent;
+        border-width: .3125em .5em .3125em 0;
+        bottom: -.3125em;
+        right: .0625em;
+    }
+}
+
+
+
+//   @-webkit-keyframes rotate {
+//     100% { -webkit-transform: rotate(360deg); }
+//   }
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
     }
 }
