--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-body{
-    background:rgb(197,228,231);
+body {
+    background: rgb(197, 228, 231);
+    // font-family: 'Nova Square', sans-serif;
+    // font-family: 'Oswald', sans-serif;
+    // font-family: 'Poppins', sans-serif;
+    font-family: 'Quicksand', sans-serif;
 }
