--- a/src/app/calculate-ammount/calculate-ammount.component.html
+++ b/src/app/calculate-ammount/calculate-ammount.component.html
@@ -1,4 +1,4 @@
-<section class="container p-3 mt-5">
+<section class="container p-3 mt-5 ">
 
     <h3 class="text-center " style="color:rgb(26, 72, 75);font-size: 34px;
     margin-bottom: 30px;"><b>Tip Calculator</b></h3>
@@ -6,7 +6,7 @@
 
 
     <div class="row d-flex justify-content-between">
-        <div class="col-md-6 p-5 border right-section order-xl-1 order-sm-2">
+        <div class="col-md-6 p-5 col-sm-12 border right-section ">
             <!-- <h3 class="text-center ">Payment</h3>
              -->
             <!-- <button (click)="downloadAsPDF()">downloadAsPDF</button> -->
@@ -66,7 +66,7 @@
                 </thead>
             </table>
         </div>
-        <div class="col-md-5 p-5 order-xl-2 order-sm-1">
+        <div class="col-md-5 col-sm-12  p-5 order-first order-sm-last order-md-last">
             <form [formGroup]="myForm">
                 <!-- <h6>Item</h6>
                 <select id="input-person" formControlName="price" class='h-40 w-100' (change)="getPrice($event)">
