--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,11 +9,11 @@ body {
 @media screen and (max-width: 768px) {
     .container {
         background: #fff;
-        border-radius: 25px;
+        border-radius: 10px!important;
         padding: 3% !important;
         box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
         border: 0px;
-        width: 80%;
+        width: 95%!important;
         position: relative!important;
         top: inherit!important;
         left: inherit!important;
@@ -25,5 +25,21 @@ body {
         font-size: 25px!important;
         margin-top: 12px;
         margin-bottom: -47px!important;
+    }
+    .right-section{
+        background: rgb(26, 72, 75);
+        color: #fff;
+        border-radius: 10px!important;
+        height: 465px;
+        margin: auto;
+        margin-bottom: 0px!important;
+        padding-top: 30px !important;
+    }
+    .col-md-5.col-sm-12.p-5.order-first.order-sm-last.order-md-last {
+        padding: 25px!important;
+    }
+    form{
+        height: 100%!important; 
+        padding-top: 27px;
     }
 }
